css/style.css
/* ... */
.item-image img {
  /*position: absolute;
  top: 0;
  right: 0;
  width: 100%;*/
}

.feed-post .item-image img {
  width: inherit;
  height: 100%;
}

.feed-post .item-title {
  font-size: 1rem;
  margin-left: 0.5rem;
  overflow: hidden;
}

.feed-post .author {
  font-size: 1rem;
  margin-left: 0.5rem;
  margin-bottom: 0.3rem;
  font-style: italic;
}

.feed-post-thumb-a, .item-image a {
  background: #232323;
  float: left;
  display: inline-block;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 0px;
  width: 100%;
  padding-top: 56.25%;
}

/* POSTS FEED POST TEXT AND AVATAR */
.feed-post-info, .item-title, .article-info {
  margin: 0 auto;
  max-height: 92px;
}

.category-name {
  margin-left: 0.2rem;
  margin-bottom: 0.2rem;
}

.item-page .article-info {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
}

.item-page .article-info dd {
  /*display: inline;
  margin-left: 0;
  padding-bottom: 6px;*/
}

.avatar-article-info {
  margin-left: 0;
  z-index: 999;
}

.avatar-article-info img {
  border: 2px solid white;
  object-position: center;
  object-fit: cover;
  border-radius: 50%;
  width: 50px;
  height: 50px;
}

.item-page .article-info-text {
  margin-left: -0.5rem;
}

.item-page .category-name {
  align-self: flex-start;
  margin-left: 1rem;
  margin-bottom: -0.2rem;
}

.item-page .published {
  align-self: flex-start;
  margin-left: 0.3rem;
}

.item h2 {
  font-size: 16px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 3px auto 0;
  color: #009de1;
}

.item-page .article-info {
  /*text-align: center;*/
  margin-bottom: 0.5rem;
}

.item .page-header {
  margin: 0 10px;
}

.item-title {
  font-family: "sourceSansPro-SemiBold";
}

.article-info {
  font-family: "sourceSansPro-LightItalic";
}

.feed-post-info-author {
  display: block;
}

.feed-post-avatar {
  display: inline-block;
  width: 32px;
}

.feed-post-avatar .avatar {
  width: 100%;
}

/* POSTS FEED POST CATEGORY */
.feed-categories {
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* FRONT PAGE CONTENT CREATORS */
.menu-cc {
  list-style: none;
  padding: 0;
  margin: 0 auto;
  float: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 24px 0 0 0;
}
.menu-cc a:link, .menu-cc a:visited{
  word-break: normal;
}
.menu-cc li {
  display: inline-block;
  width: 200px;
  margin: 12px 24px;
}

.menu-cc li img {
  width: 100%;
  border: 3px solid white;
  border-radius: 50%;
  -webkit-box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.5);
  box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.5);
  object-position: center;
  object-fit: cover;
  border-radius: 50%;
  width: 180px;
  height: 180px;
  /* max-width: 80%; */
}

.menu-cc li img:hover {
  transition: .1s;
  box-shadow: 0px 0px 9px white;
}

.menu-cc li span {
  text-align: center;
  display: block;
  width: 100%;
  margin-top: 10px;
  min-height: 72px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

#content-creators-section {
  background-image: linear-gradient(#001a34, #004080 20%, #004080 60%, #001a34 100%);
  border-top: 1px solid #333;
  padding-bottom: 12px;
}

main .container {
  margin: 1.5rem auto;
  width: calc(100% - 1rem);
}

#content-creators-section h3 {
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  font-size: 2rem;
  font-family: arvo, "sourceSansPro";
}

.mod-list li a {
  display: block;
  text-align: center;
  font-size: 1.5rem;
}

.mod-list li a:link, .mod-list li a:visited {
  font-family: "sourceSansPro-SemiBold";
}

.container .shortcode-author-avatars .author-list .user .name {
  margin: 12px 0 24px 0;
}

/* -------------------------------------------------------------------------- */
/*	5. Site Footer
/* -------------------------------------------------------------------------- */
footer {
  border-top: 1px solid #333;
  width: 100%;
}

footer .container {
  position: relative;
}

.footer-logo {
  display: inline-block;
  background-image: url('../img/ogwn-flag.png');
  background-position: center;
  background-size: contain;
  width: 100%;
  padding-top: 300px;
  background-repeat: no-repeat;
}

footer .container ul {
  list-style-type: none;
  margin-top: 48px;
  -webkit-columns: 75px 2;
  /* Chrome, Safari, Opera */
  -moz-columns: 75px 2;
  /* Firefox */
  columns: 75px 2;
  padding: 0;
}

footer .container ul a:link {
  font-family: "sourceSansPro-SemiBold";
  font-size: 1.25rem;
  text-transform: uppercase;
}

footer .container ul ul {
  width: 100%;
  height: 300px;
}

footer .container ul li {
  margin: 0 0 24px;
  text-align: center;
  width: 100%;
}

/* -------------------------------------------------------------------------- */
/*	6. Author Page
/* -------------------------------------------------------------------------- */
/* AUTHOR PAGE INFORMATION  */
.author-page-header {
  background-image: linear-gradient(#383e76, #151739 90%);
  border-bottom: 1px solid gray;
  border-top: 1px solid rgb(80, 80, 167);
  text-align: center;
}

.author-page-header-profile {
  text-align: center;

}

.author-page-header-profile .avatar {
  border: 3px solid white;
  /* margin-top: 10px; */
  object-position: center;
  object-fit: cover;
  border-radius: 50%;
  width: 150px;
  height: auto;
}

.author-donate a {
  text-transform: uppercase;
  display: inline-block;
  padding: 1em;
  font-weight: bold;
  background: green;
  border-radius: 1rem;
  width: 100%;
  padding: 12px 0;
  margin: 14px 0 0;
  font-size: 16px;
  font-family: Rubik, "sourceSansPro";
  border: 1px solid rgb(63, 148, 58);
  border-bottom: 1px solid rgb(0, 46, 18);
  border-right: 1px solid rgb(0, 46, 18);
  text-align: center;
}
/* ... */

